# embed_debug_mcp

./: README.md
src/: development_log.md  devices.yaml.example  embed_debug_tool_design.md  pyproject.toml
src/src/embed_debug_mcp/: __init__.py  __main__.py  connection_pool.py  device_config.py  filters.py  log_buffer.py  main.py  serial_conn.py  ssh_conn.py
