[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embed-debug-mcp"
version = "0.1.0"
description = "MCP Server for embedded device debugging via serial port and SSH"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pyserial>=3.5",
    "paramiko>=3.4",
    "pyyaml>=6.0",
]

[project.scripts]
embed-debug-mcp = "embed_debug_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/embed_debug_mcp"]
